--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ evaluate = "^0.4.0"
 datasets = "^2.12.0"
 wandb = "^0.15.1"
 scikit-learn = "^1.2.2"
+ray = {extras = ["tune"], version = "^2.4.0"}
 
 
 [tool.poetry.group.dev.dependencies]
