--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,19 @@
 [tool.poetry]
 name = "emotion-classification"
 version = "0.1.0"
-description = ""
+description = "Multilanguage Emotion Classification"
 authors = ["ma2za <mazzapaolo2019@gmail.com>"]
 readme = "README.md"
 packages = [{ include = "emotion_classification" }]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-pandas = "^2.0.1"
+python = "^3.8"
 transformers = "^4.28.1"
 torch = "^2.0.0"
-evaluate = "^0.4.0"
-datasets = "^2.12.0"
-wandb = "^0.15.1"
-scikit-learn = "^1.2.2"
-ray = {extras = ["tune"], version = "^2.4.0"}
-
+fasttext = "^0.9.2"
+easynmt = "^2.0.2"
 
 [tool.poetry.group.dev.dependencies]
-ipykernel = "^6.22.0"
 
 [build-system]
 requires = ["poetry-core"]
