--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "text-emotion"
-version = "0.0.2"
+version = "0.0.3"
 description = "Multilingual Emotion Classification"
 authors = ["ma2za <mazzapaolo2019@gmail.com>"]
 license = "MIT"
@@ -15,10 +15,13 @@ keywords = ["text-emotion", "xlm-roberta", "text-classification", "multilingual"
 [tool.poetry.dependencies]
 python = "^3.8"
 torch = "^2.0.1"
-transformers = "^4.29.2"
-requests = "^2.31.0"
-easynmt = "^2.0.2"
-fasttext = "^0.9.2"
+transformers = "^4.30.1"
+requests = { version = "^2.31.0", optional = true }
+easynmt = { version = "^2.0.2", optional = true }
+fasttext = { version = "^0.9.2", option = true }
+
+[tool.poetry.extras]
+translate = ["requests", "easynmt", "fasttext"]
 
 [tool.poetry.group.dev.dependencies]
 
