--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ torch = "^2.0.1"
 transformers = "^4.30.1"
 requests = { version = "^2.31.0", optional = true }
 easynmt = { version = "^2.0.2", optional = true }
-fasttext = { version = "^0.9.2", option = true }
+fasttext = { version = "^0.9.2", optional = true }
 
 [tool.poetry.extras]
 translate = ["requests", "easynmt", "fasttext"]
